--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,3 +2,7 @@ name: DeathMaze
 author: 615283
 version: ${project.version}
 main: com.georlegacy.general.deathmaze.DeathMaze
+commands:
+  deathmaze:
+    usage: /<command>
+    aliases: [dm, dmaze, deathm, maze]
