--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
                 <includes>
                     <include>plugin.yml</include>
                     <include>config.yml</include>
+                    <include>messages.yml</include>
                 </includes>
             </resource>
         </resources>
