havent tested yet but should work lol

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -26,4 +26,4 @@ ScoreboardFormat:
  - '&bDeaths: &e%DEATHS%'
 
 # Default refill time period when creating lootable containers in milliseconds.
-DefaultRefillMillis: 5000
+DefaultRefillSeconds: 300
