--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -24,6 +24,7 @@ ScoreboardFormat:
  - '&bDistance: &e%DISTANCE%'
  - '&bKills: &e%KILLS%'
  - '&bDeaths: &e%DEATHS%'
+ - '&bChests: &e%CONTAINERS%'
 
 # Header for region entry title
 # %RNAME% - Name of the region
