--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
     <repositories>
         <repository>
             <id>sk89q-repo</id>
-            <url>>http://maven.sk89q.com/repo/</url>
+            <url>http://maven.sk89q.com/repo/</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
