--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.georlegacy.general.deathmaze</groupId>
     <artifactId>DeathMaze</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.1.5-DEV</version>
 
     <name>${artifactId}</name>
     <properties>
