--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -39,7 +39,9 @@ SetRefillTimeContainerCommandFailNotContainer: '&eThat container is not currentl
 
 CheckContainerLootableFalse: '&eThat container has not been registered or is not in a maze enabled world.'
 
-CheckContainerLootableTrue: '&aThat container is a registered container within the maze.'
+# Placeholders available:
+# %REFILL% - Refill time for the container
+CheckContainerLootableTrue: '&aThat container is a registered container within the maze and has a refill time of %REFILL% seconds.'
 
 AddRegionAlreadyExists: '&eA region of this name already exists.'
 
@@ -92,3 +94,10 @@ RegionRemoveSplashNotEnough: '&eThat would leave you with no splashes.'
 RegionRemoveSplashSuccess: '&aThe splash has been removed.'
 
 RegionListSplashHeader: '&aSplashes are as following:'
+
+RegionCheckFail: '&eYou are not currently in a region.'
+
+# Placeholders available: 
+# %RNAME% - The current region's name
+# %ESOUND% - The entry sound for the current region
+RegionCheckSuccess: '&aYou are currently in &e%RNAME%&a. The entry sound is &e%ESOUND%&a.'
