--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,8 +5,11 @@
 # %KILLS% - Player's kills in the maze
 # %DEATHS% - Player's deaths in the maze
 # %REGIONS% - Explored regions in the maze
-# %CURRENTREGION%
+# %CURRENTREGION% - The current region
 # %CONTAINERS% - Containers looted within the maze
+# %LEVEL% - The player's current level
+# %XP% - The player's current excess xp
+# %NEXTXP% - The total xp of the next level
 
 # Worlds that DeathMaze is active in.
 EnabledWorlds:
@@ -37,6 +40,8 @@ ScoreboardFormat:
 - '&bLootables: &e%CONTAINERS%'
 - '&bRegions: &e%REGIONS%'
 - '&bCurrent Region: &e%CURRENTREGION%'
+- '&bLevel: &e%LEVEL%'
+- '&bNext Level: &e%XP%/%NEXTXP%'
 
 # Format for staff editing scoreboard.
 # Color codes and ONLY %NAME% placeholder allowed.
@@ -85,3 +90,18 @@ RegionEntryBlindness: 2
 
 # Default refill time period when creating lootable containers in milliseconds.
 DefaultRefillSeconds: 15
+
+# XP earned by a player for every 100 meters walked in the maze
+XPPer100M: 5
+
+# XP earned by a player for every kill in the maze
+XPPerKill: 8
+
+# XP earned by a player dying in the maze
+XPPerDeath: 0
+
+# XP earned by a player for opening a new lootable
+XPPerLootable: 15
+
+# XP earned by a player for entering a new region
+XPPerRegion: 20
